# M_HPC_etudiant-master

./: .gitignore  README.md
hpcMnist/: README.md  mnist_test.py  mnist_train.py  shell.nix
hpcMpi/: default.nix  setup.py
hpcMpi/cpp/: Image.cpp  Image.hpp  Integral.cpp  Wrapper.cpp
hpcMpi/scripts/: hpcMpiHello1.py  hpcMpiHello2.py  hpcMpiImageRun.sh  hpcMpiImageSeq.py  hpcMpiIntegralRun.sh  hpcMpiIntegralSeq.py  hpcMpiPlot.py
hpcMpiCpp/: Makefile  default.nix  hpcMpiCppHello1.cpp  hpcMpiCppHello2.cpp
hpcOpencl/: Makefile  OpenCLInfo.cpp  TP_OpenCL_imageproc_1.cpp  TP_OpenCL_imagetranspo_1.cpp  TP_OpenCL_matvecmul_1.cpp  TP_OpenCL_saxpy_1.cpp  default.nix  opencHelp.hpp
hpcOpencv/: README.md  shell.nix
hpcOpencv/data/: bmx.mkv
hpcOpencv/scripts/: hpcOpencvTest.py
hpcOpencvCpp/: Makefile  README.md  shell.nix
hpcOpencvCpp/src/: hpcOpencvCppBlur.cpp
hpcOpenmp/: Makefile  default.nix  hpcOpenmpFibo.cpp  hpcOpenmpFilter.cpp  hpcOpenmpRandom.cpp  hpcOpenmpSchedule.cpp
hpcThreads/: default.nix  setup.py
hpcThreads/cpp/: Fibo.cpp  Hello.cpp  Wrapper.cpp
hpcThreads/scripts/: hpcThreadsFiboPlot.py  hpcThreadsFiboTest.py  hpcThreadsFiboTime.py  hpcThreadsHello.py
hpcWebcam/: Main.hs  default.nix  index.html  webcam.cabal
